--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>都道府県別総人口推移グラフ</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/resas.css">
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <table id="resas_prefecture_table">
-        </table>
-        <button class="btn" type="button" onclick="resas()">県取得</button>
-        <button class="btn" onclick="turn_idcheck()"></button>
-        <h2 id="text_test"></h2>
-    </main>
+    <header>
+        <h1>都道府県別人口推移</h1>
+    </header>
+    <div id="root"></div>
     <footer>
         <small>2022 Junpei Matsunaga. Unauthorized copying prohibited.</small>
     </footer>
     <a href="#" id="top_btn"><i class="fa-solid fa-angle-up top_btn_icon"></i></a>
     <!-- jqueryの読み込み -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="js/resas_api.js"></script>
+    <!-- <script src="js/resas_api.js"></script> -->
 </body>
 
 </html>
