--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>都道府県別総人口推移グラフ</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="css/common.css">
 </head>
@@ -15,7 +15,7 @@
     <header>
         <h1>都道府県別人口推移</h1>
     </header>
-    <div id="root"></div>
+    <main id="root"></main>
     <footer>
         <small>2022 Junpei Matsunaga. Unauthorized copying prohibited.</small>
     </footer>
