--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>都道府県別総人口推移グラフ</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/common.css">
 </head>
 
